Closed
Bug 530296
Opened 15 years ago
Closed 15 years ago
Replace PR_MIN/PR_MAX with NS_MIN/NS_MAX in /editor
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a2
People
(Reporter: lusian, Assigned: lusian)
References
Details
Attachments
(1 file)
20.19 KB,
patch
|
peterv
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20091120 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Build Identifier:
Please see Bug #512106.
Reproducible: Always
Assignee | ||
Comment 1•15 years ago
|
||
Attachment #413812 -
Flags: review?(peterv)
Updated•15 years ago
|
Assignee: nobody → lusian
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•15 years ago
|
Attachment #413812 -
Flags: review?(peterv) → review+
Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Comment 2•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a2
You need to log in
before you can comment on or make changes to this bug.
Description
•