Bug 530296 - Replace PR_MIN/PR_MAX with NS_MIN/NS_MAX in /editor. r=peterv